# Fiblets

./: .gitignore  CMakeLists.txt  License  Readme.md
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
qfib/: CMakeLists.txt  compression.hpp  qfib.hpp  saveload.hpp
visualization/: CMakeLists.txt
visualization/interfacegui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widgetopengl.cpp  widgetopengl.h
visualization/opengl/: camera.cpp  camera.h  openglutils.cpp  openglutils.h
visualization/opengl/shaders/: basic.frag  basic.vert  viewTexture.frag  viewTexture.vert
visualization/opengl/shaders/decompression/: decompression.frag  decompression_meshshader.frag  geometry_no_optims.geom  geometry_optims.geom  mesh_no_optims.mesh  mesh_optims.mesh  task_no_optims.task  task_optims.task  tesselationctrl_no_optims.tesc  tesselationctrl_optims.tesc  tesselationeval.tese
visualization/opengl/shaders/decompression/deprecated paper version/: mesh_optims_deprec.mesh
visualization/opengl/shaders/meshcut/: backOccluder.frag  backOccluder.geom  backOccluder.vert  backOccluderFragment.vert
visualization/opengl/shaders/postprocess/: SSAOShading.frag  SSAOShading.vert
visualization/opengl/shaders/selectedRendering/: render3d.frag  render3d.tesc  render3d.tese  render3d.vert  renderUncompressed.frag  renderUncompressed.vert
visualization/opengl/shaders/zfiltering/: zCopy.vert  zCopyFragment.frag  zCopyTest.frag  zMaxFilter.frag  zMaxFilter.vert  zMeshing.frag  zMeshing.geom  zMeshing.vert  zWrap.frag  zWrap.tese
visualization/scene/: scene.cpp  scene.h
(+1 files in other folders)
